Add functionality of header with islooged in (index)

--- a/css/header.css
+++ b/css/header.css
@@ -49,6 +49,10 @@
   width: 210px;
 }
 
+.offcanvas.w-85 {
+  width: 85% !important;
+}
+
 .button__primary--purple {
   color: rgb(47, 58, 178);
   background-color: transparent;
