--- a/css/header.scss
+++ b/css/header.scss
@@ -55,6 +55,10 @@
     }
   }
   
+  .offcanvas.w-85{
+    width: 85% !important;
+  }
+
   .button__primary--purple {
     color: rgb(47, 58, 178);
     background-color: transparent;
